--- a/DavidMcKay/DavidMcKay.html
+++ b/DavidMcKay/DavidMcKay.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>David McKay</h1>
+<img src="DavidMcKay1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,30 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DavidMcKay24.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,31 +55,30 @@ McKay’s son Alexander would follow in his father’s shoes by taking over the 
 </p><p>
 Titles
 </p><p>
-<li>Ace Comics (1937)
-<li>American Library (1943)
-<li>Barney Baxter (1938)
-<li>Blondie (1942)
-<li>Blondie Comics (1947)
-<li>Blondie: 100 Selected Top-Laughs of America's Best Loved Comic (1944)
-<li>Dick Tracy (1937)
-<li>Feature Book (1937)
-<li>Mandrake the Magician (1938)
-<li>Perry Mason (1946)
-<li>Phantom (1939)
-<li>Prince Valiant (1941)
-<li>Future Comics (1940)
-<li>Henry (1935)
-<li>The Katzenjammer Kids (1947)
-<li>King Comics (1936)
-<li>Little Annie Rooney (1935)
-<li>Little Orphan Annie and the Kidnappers (1941)
-<li>Little Orphan Annie Popped Wheat Giveaway (1947)
-<li>Magic Comics (1939)
-<li>Mickey Mouse Series (1931)
-<li>Popeye (1935)
-<li>The Romance of Flying (1942)
-<li>They'll Do It Every Time (1939)
-<li>Conquest of Peru (1882)
+<li><a href="DavidMcKay1.jpg">Ace Comics</a> (1937)
+<li><a href="DavidMcKay2.jpg">Adventures of Mickey Mouse</a> (1931)
+<li><a href="DavidMcKay3.jpg">American Library</a> (1943)
+<li><a href="DavidMcKay4.jpg">Blondie Comics</a> (1947)
+<li><a href="DavidMcKay5.jpg">Blondie: 100 Selected Top-Laughs of America's Best Loved Comic</a> (1944)
+<li><a href="DavidMcKay6.jpg">Feature Book</a> (1937)
+<li><a href="DavidMcKay7.jpg">Fun With Little Lulu</a> (1938)
+<li><a href="DavidMcKay8.jpg">Future Comics</a> (1946)
+<li><a href="DavidMcKay9.jpg">Henry</a> (1935)
+<li><a href="DavidMcKay10.jpg">Katzenjammer Kids</a> (1947)
+<li><a href="DavidMcKay11.jpg">King Comics</a> (1936)
+<li><a href="DavidMcKay12.jpg">Laughs With Little Lulu</a> (1942)
+<li><a href="DavidMcKay13.jpg">Little Annie Rooney</a> (1935)
+<li><a href="DavidMcKay14.jpg">Little Lulu And Her Pals</a> (1939)
+<li><a href="DavidMcKay15.jpg">Little Lulu On Parade</a> (1941)
+<li><a href="DavidMcKay16.jpg">Little Lulu Plays Pirate</a> (1946)
+<li><a href="DavidMcKay17.jpg">Little Orphan Annie's Junior Commands</a> (1941)
+<li><a href="DavidMcKay18.jpg">Magic Comics</a> (1939)
+<li><a href="DavidMcKay19.jpg">Mickey Mouse</a> (1931)
+<li><a href="DavidMcKay20.jpg">Oh, Little Lulu!</a> (1935)
+<li><a href="DavidMcKay21.jpg">Picture Crimes</a> (1937)
+<li><a href="DavidMcKay22.jpg">Popeye</a> (1935)
+<li><a href="DavidMcKay23.jpg">Secret Agent X-9</a> (1934)
+<li><a href="DavidMcKay24.jpg">They'll Do It Every Time</a> (1939)
 </p>
 
 </body>
