--- a/AftershockComics/AftershockComics.html
+++ b/AftershockComics/AftershockComics.html
@@ -74,6 +74,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Aftershock54.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aftershock55.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aftershock56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock57.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -111,6 +112,7 @@ Titles
 <li><a href="Aftershock17.jpg">Clankillers (2018)
 <li><a href="Aftershock18.jpg">Cold War (2018)
 <li><a href="Aftershock19.jpg">Dark Ark (2017)
+<li><a href="Aftershock57.jpg">Dead Day (2020)
 <li><a href="Aftershock20.jpg">Dead Kings (2018)
 <li><a href="Aftershock21.jpg">Dreaming Eagles (2015)
 <li><a href="Aftershock22.jpg">Eleanor and the Egret (2017)
