--- a/index.html
+++ b/index.html
@@ -36716,6 +36716,13 @@
 </tr>
 
 <tr>
+<td>Handicraft Guide: Cartooning</td>
+<td>1940</td>
+<td>USAF</td>
+<td><a href="HandicraftGuideCartooning/HandicraftGuideCartooning.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hands Of The Dragon</td>
 <td>1975</td>
 <td>Atlas Seaboard</td>
