--- a/index.html
+++ b/index.html
@@ -40776,6 +40776,13 @@
 </tr>
 
 <tr>
+<td>Iron Circus Comics</td>
+<td>2007</td>
+<td>Publisher</td>
+<td><a href="IronCircusComics/IronCircusComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Iron Corporal</td>
 <td>1985</td>
 <td>Charlton</td>
