--- a/index.html
+++ b/index.html
@@ -47971,6 +47971,13 @@
 </tr>
 
 <tr>
+<td>Mad Cave Studios</td>
+<td>2014</td>
+<td>Publisher</td>
+<td><a href="MadCaveStudios/MadCaveStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mad Magazine</td>
 <td>2018</td>
 <td>DC</td>
@@ -48815,6 +48822,13 @@
 <td>2013</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Markosia Enterprises</a>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="Markosia/Markosia.html">Details</a></td>
 </tr>
 
 <tr>
