--- a/index.html
+++ b/index.html
@@ -29229,6 +29229,13 @@
 </tr>
 
 <tr>
+<td>Fae Archaic</td>
+<td>2018</td>
+<td>Kirt Burdick</td>
+<td><a href="KirtBurdick/KirtBurdick.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fafhrd And The Gray Mouser</td>
 <td>1990</td>
 <td>Marvel</td>
@@ -44321,6 +44328,13 @@
 <td>2008</td>
 <td>Abrams</td>
 <td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kirt Burdick</td>
+<td>1969</td>
+<td>Creator</td>
+<td><a href="KirtBurdick/KirtBurdick.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60096,6 +60110,13 @@
 <td>2010</td>
 <td>Vertigo</td>
 <td><a href="RatCatcher/RatCatcher.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rat House Comics</td>
+<td>2019</td>
+<td>Publisher</td>
+<td><a href="RatHouseComics/RatHouseComics.html">Details</a></td>
 </tr>
 
 <tr>
