--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -315,6 +315,7 @@ Titles
 <li><a href="../Palestine/Palestine.html">Palestine</a> (1993)
 <li><a href="Fantagraphics105.jpg">Palomar</a> (2003)
 <li><a href="../DanielClowes/DanielClowes.html">Patience</a> (2016)
+<li><a href="Fantagraphics144.jpg">Penny Century</a> (1997)
 <li><a href="Fantagraphics106.jpg">Pictopia</a> (1992)
 <li><a href="Fantagraphics107.jpg">Pixy</a> (1993)
 <li><a href="Fantagraphics108.jpg">Pogo: The Complete Syndicated Comic Strips</a> (2011)
