--- a/index.html
+++ b/index.html
@@ -57114,6 +57114,13 @@
 </tr>
 
 <tr>
+<td>Penny Century</td>
+<td>1997</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pedro</td>
 <td>1950</td>
 <td>Fox Comics</td>
@@ -65726,6 +65733,13 @@
 <td>1990?</td>
 <td>Creator</td>
 <td><a href="SimonHanselmann/SimonHanselmann.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Simon &amp; Schuster</td>
+<td>1924</td>
+<td>Publisher</td>
+<td><a href="SimonAndSchuster/SimonAndSchuster.html">Details</a></td>
 </tr>
 
 <tr>
