--- a/index.html
+++ b/index.html
@@ -12493,6 +12493,13 @@
 </tr>
 
 <tr>
+<td>Blastbooks</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="Blastbooks/Blastbooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blaze</td>
 <td>1994</td>
 <td>Marvel</td>
@@ -27371,6 +27378,13 @@
 <td>2010</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edmond Kiraz</td>
+<td>1923</td>
+<td>Creator</td>
+<td><a href="EdmondKiraz/EdmondKiraz.html">Details</a></td>
 </tr>
 
 <tr>
