--- a/index.html
+++ b/index.html
@@ -25906,6 +25906,13 @@
 </tr>
 
 <tr>
+<td>Dr. Seuss</td>
+<td>1904</td>
+<td>Creator</td>
+<td><a href="DrSeuss/DrSeuss.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dr. Slump</td>
 <td>2005</td>
 <td>Viz</td>
@@ -42712,6 +42719,13 @@
 <td>2008</td>
 <td>Aardvark-Vanaheim</td>
 <td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge</td>
+<td>1881</td>
+<td>Judge</td>
+<td><a href="Judge/Judge.html">Details</a></td>
 </tr>
 
 <tr>
