--- a/index.html
+++ b/index.html
@@ -3042,6 +3042,13 @@
 </tr>
 
 <tr>
+<td>AHOY Comics</td>
+<td>2018</td>
+<td>Publisher</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ai Ore!</td>
 <td>2011</td>
 <td>Viz</td>
