Ahoy comics index

--- a/index.html
+++ b/index.html
@@ -7369,6 +7369,13 @@
 </tr>
 
 <tr>
+<td>Ash And Thorn</td>
+<td>2020</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ashen Victor</td>
 <td>1997</td>
 <td>Viz</td>
@@ -11385,6 +11392,13 @@
 </tr>
 
 <tr>
+<td>Billionare Island</td>
+<td>2020</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Billy Bunny</td>
 <td>1954</td>
 <td>Farrell</td>
@@ -14599,6 +14613,13 @@
 </tr>
 
 <tr>
+<td>Bronze Age Boogie</td>
+<td>2019</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brother Juniper</td>
 <td>1959</td>
 <td>Pocket Books</td>
@@ -15737,6 +15758,13 @@
 <td>1955</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Ginger</td>
+<td>2018</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26228,6 +26256,13 @@
 </tr>
 
 <tr>
+<td>Dragaonfly and Dragonflyman</td>
+<td>2019</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dragonheart</td>
 <td>1996</td>
 <td>Topps</td>
@@ -27217,6 +27252,13 @@
 <td>1989</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Allan Poe's Snifter Of Terror</td>
+<td>2018</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37283,6 +37325,13 @@
 </tr>
 
 <tr>
+<td>Hashtag: Danger</td>
+<td>2019</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hate</td>
 <td>1990</td>
 <td>Fantagraphics</td>
@@ -38407,6 +38456,13 @@
 <td>1450</td>
 <td>Creator</td>
 <td><a href="HieronymusBosch/HieronymusBosch.html">Details</a></td>
+</tr>
+
+<tr>
+<td>High Heaven</td>
+<td>2018</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -57966,6 +58022,13 @@
 </tr>
 
 <tr>
+<td>Planet Of The Nerds</td>
+<td>2019</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Planet Of Vampires</td>
 <td>1975</td>
 <td>Atlas Seaboard</td>
@@ -64128,6 +64191,13 @@
 </tr>
 
 <tr>
+<td>Second Comming</td>
+<td>2019</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Second Sight</td>
 <td>2016</td>
 <td>Aftershock</td>
@@ -68400,6 +68470,13 @@
 <td>2014</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Steel Cage</td>
+<td>2019</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -78191,6 +78268,13 @@
 <td>2003</td>
 <td>Avatar</td>
 <td><a href="WritingForComics/WritingForComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wrong Earth</td>
+<td>2018</td>
+<td>AHOY Comics</td>
+<td><a href="AhoyComics/AhoyComics.html">Details</a></td>
 </tr>
 
 <tr>
