--- a/Casterman/Casterman.html
+++ b/Casterman/Casterman.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>Casterman</h1>
+<img src="Casterman1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,8 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Casterman1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Casterman2.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -30,6 +31,35 @@ Strengthened by the success of Hergé's comics, shortly after Casterman proposed
 </p><p>
 Keen to appeal to a more mature market, Casterman decided in 1973 to publish the first albums of Corto Maltese by the Italian author Hugo Pratt. Furthermore, in 1978 Casterman established its monthly magazine A Suivre, which was to influence the comics revival of the 1980s. Casterman ceased the publication of A Suivre in 1997.Casterman is now part of Groupe Flammarion.Casterman's manga series are published under the imprint Sakka. 
 </p><p>
+Comics
+</p><p>
+<li><a href="Casterman2.jpg">A Suivre</a> (1977)
+<li><a href="Casterman1.jpg">Adventures de Tintin (in the Land of the Soviets)</a> (1934) 
+<li>Blue Lotus (1936) 
+<li>Broken Ear (1937) 
+<li>Black Island (1938) 
+<li>Calculus Affair (1956) 
+<li>Castafiore Emerald (1963)
+<li>Cigars of the Pharaoh (1934) 
+<li>Crab with the Golden Claws (1941)
+<li>Destination Moon (1953) 
+<li>Explorers on the Moon (1954)
+<li>Flight 714 to Sydney (1968)
+<li>Hilde (2020) 
+<li>King Ottokar's Sceptre (1939)  
+<li>Land of Black Gold (1950) 
+<li>Prisoners of the Sun (1949) 
+<li>Red Rackham's Treasure (1944) 
+<li>Red Sea Sharks (1958) 
+<li>Secret of the Unicorn (1943) 
+<li>Seven Crystal Balls (1948) 
+<li>Shooting Star (1942)   
+<li>Tintin and the Picaros (1976) 
+<li>Tintin and Alph-Art (1986) 
+<li>Tintin in America</a> (1932) 
+<li>Tintin in the Congo</a> (1931)
+<li>Tintin in Tibet (1960)
+</p><p>   
 TV Shows
 </p><p>
 <li>TV Show: Hergé's Adventures of Tintin (1958–1962) 
@@ -43,33 +73,6 @@ Video Games
 <li>Tintin: Destination Adventure (2001) 
 <li>The Adventures of Tintin: The Secret of the Unicorn (2011)
 </p><p>
-Comics
-</p><p>
-<li><a href="../Tintin/Tintin.html">Tintin in the Land of the Soviets</a> (1930) 
-<li>Tintin in the Congo</a> (1931) 
-<li>Tintin in America</a> (1932) 
-<li>Cigars of the Pharaoh (1934) 
-<li>The Blue Lotus (1936) 
-<li>The Broken Ear (1937) 
-<li>The Black Island (1938) 
-<li>King Ottokar's Sceptre (1939) 
-<li>The Crab with the Golden Claws (1941) 
-<li>The Shooting Star (1942) 
-<li>The Secret of the Unicorn (1943) 
-<li>Red Rackham's Treasure (1944) 
-<li>The Seven Crystal Balls (1948) 
-<li>Prisoners of the Sun (1949) 
-<li>Land of Black Gold (1950) 
-<li>Destination Moon (1953) 
-<li>Explorers on the Moon (1954) 
-<li>The Calculus Affair (1956) 
-<li>The Red Sea Sharks (1958) 
-<li>Tintin in Tibet (1960) 
-<li>The Castafiore Emerald (1963) 
-<li>Flight 714 to Sydney (1968) 
-<li>Tintin and the Picaros (1976) 
-<li>Tintin and Alph-Art (1986) 
-<li>Hilde (2020)
 </p>
 
 </body>
