--- a/index.html
+++ b/index.html
@@ -34701,6 +34701,13 @@
 </tr>
 
 <tr>
+<td>Gladstone Publishing</td>
+<td>1985</td>
+<td>Publisher</td>
+<td><a href="GladstonePublishing/GladstonePublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gladstone's School For World Conquerors</td>
 <td>2011</td>
 <td>Image</td>
