--- a/index.html
+++ b/index.html
@@ -54042,6 +54042,13 @@
 </tr>
 
 <tr>
+<td>New Beginning</td>
+<td>1988</td>
+<td>Unicorn</td>
+<td><a href="NewBeginning/NewBeginning.html">Details</a></td>
+</tr>
+
+<tr>
 <td>New Comics</td>
 <td>1935</td>
 <td>National Allied</td>
