Street And Smith

--- a/index.html
+++ b/index.html
@@ -68632,7 +68632,7 @@
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
 </tr>
-
+    
 <tr>
 <td>Steven Universe: Fusion Frenzy</td>
 <td>2019</td>
@@ -69239,7 +69239,14 @@
 <td>Street &amp; Smith</td>
 <td>1855</td>
 <td>Publisher</td>
-<td><a href="StreetSmith/StreetSmith.html">Details</a></td>
+<td><a href="StreetAndSmith/StreetAndSmith.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street And Smith</td>
+<td>1855</td>
+<td>Publisher</td>
+<td><a href="StreetAndSmith/StreetAndSmith.html">Details</a></td>
 </tr>
 
 <tr>
