--- a/index.html
+++ b/index.html
@@ -24394,6 +24394,13 @@
 </tr>
 
 <tr>
+<td>Die!Die!Die!</td>
+<td>2018</td>
+<td>Image</td>
+<td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Diesel</td>
 <td>1997</td>
 <td>Antarctic Press</td>
