--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -18,6 +18,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics8.jpg"></div>
@@ -161,6 +162,9 @@
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics140.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics141.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Fantagraphics142.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics143.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics144.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Fantagraphics145.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -178,6 +182,8 @@ Catron acted as Fantagraphics' co-publisher until 1985 (also handling advertisin
 </p><p>
 Titles
 </p><p>
+<li><a href="Fantagraphics1.jpg">#$@&!: The Official Lloyd Llewellyn Collection</a> (1989)
+<li><a href="Fantagraphics145.jpg">(You and Your) Big Mouth</a> (1993)
 <li><a href="Fantagraphics4.jpg">2 Live Crew</a> (1991)
 <li><a href="Fantagraphics6.jpg">3 New Stories</a> (2013)
 <li><a href="Fantagraphics8.jpg">7 Miles a Second</a> (2012)
@@ -356,6 +362,7 @@ Titles
 <li><a href="../Zap/zap.html">Zap</a> (2016)
 <li><a href="Fantagraphics136.jpg">Zero Zero</a> (1995)
 <li><a href="Fantagraphics142.jpg">Zoot!</a> (1995)
+
 
 
 </p>
