--- a/index.html
+++ b/index.html
@@ -1248,6 +1248,13 @@
 </tr>
 
 <tr>
+<td>#$@&!: The Official Lloyd Llewellyn Collection</td>
+<td>1989</td>
+<td>Fantagraphics</td>
+<td><a href="Fantagraphics/Fantagraphics.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>"Bob's" Favorite Comics</td>
 <td>1989</td>
 <td>Rip Off</td>
