--- a/PeterBagge/PeterBagge.html
+++ b/PeterBagge/PeterBagge.html
@@ -30,6 +30,7 @@
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge48.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge14.jpg"></div>
@@ -63,6 +64,31 @@
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge42.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge43.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge68.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge69.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge70.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -94,6 +120,7 @@ Titles
 <li><a href="PeterBagge39.jpg">Credo: The Rose Wilder Lane Story (2019)
 <li><a href="PeterBagge11.jpg">Everyone Is Stupid Except for Me and Other Astute Observations</a> (2009)
 <li><a href="PeterBagge40.jpg">Fire!!: The Zora Neale Hurston Story</a> (2017)
+<li><a href="PeterBagge46.jpg">Founding Fathers Funnies</a> (2016)
 <li><a href="PeterBagge30.jpg">Fun with Buddy + Lisa</a> (1995)
 <li><a href="../Hate/Hate.html">Hate</a> (1990
 <li><a href="PeterBagge32.jpg">Hey, Buddy!</a> (1993)
@@ -101,6 +128,7 @@ Titles
 <li><a href="PeterBagge41.jpg">Junior and Other Losers</a> (1990)
 <li><a href="PeterBagge2.jpg">Martini Baton</a> (1993)
 <li><a href="../NeatStuff/NeatStuff.html">Neat Stuff</a> (1985)
+<li><a href="PeterBagge47.jpg">Other Lives</a> (2010)
 <li><a href="PeterBagge14.jpg">Other Stuff</a> (2010)
 <li><a href="PeterBagge15.jpg">Purple Sightings</a>
 <li><a href="PeterBagge20.jpg">Reset</a> (2012)
