--- a/Peanuts/Peanuts.html
+++ b/Peanuts/Peanuts.html
@@ -19,6 +19,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="Peanuts1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Peanuts2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Peanuts3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Peanuts4.jpg"></div>
@@ -31,6 +32,12 @@
 <div class="mySlides" style="text-align: center;"><img src="Peanuts11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Peanuts12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Peanuts13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Peanuts14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Peanuts15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Peanuts16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Peanuts17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Peanuts18.jpg"></div>
+
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -48,5 +55,6 @@ Peanuts is one of the literate strips with philosophical, psychological, and soc
 </p><p>
 Peanuts achieved considerable success with its television specials, several of which, including A Charlie Brown Christmas and It's the Great Pumpkin, Charlie Brown, won or were nominated for Emmy Awards. The Peanuts holiday specials remain popular and are broadcast on ABC in the U.S. during the appropriate seasons, since 2001. The Peanuts franchise also had success in theatre, with the stage musical You're a Good Man, Charlie Brown an oft-performed production. In 2013, TV Guide ranked the Peanuts television specials the fourth Greatest TV Cartoon of All Time. A computer-animated feature film based on the strip, The Peanuts Movie, was released in 2015. 
 </p>
+
 </body>
 </html>
