--- a/DennisTheMenace/DennisTheMenace.html
+++ b/DennisTheMenace/DennisTheMenace.html
@@ -6,12 +6,9 @@
 <script src="../slideshow.js"></script>
 <title>Dennis The Menace</title>
 </head>
+<body> 
 
-<body>
-<img src=""> 
-<img src="DennisTheMenaceMovie.jpg"> <br>
-1951-2019 Comic series by Post-Hall, Standard/Pines, Fawcett, Charlton, Marvel, Fantagraphics <br>
-1959-1963 TV Series by CBS, 1986-1988 TV Animated by CBS, 1993 Movie by Warner Bros. 
+<img src="DennisTheMenace002.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -33,10 +30,10 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
 Dennis the Menace is a daily syndicated newspaper comic strip originally created, written, and illustrated by Hank Ketcham. It debuted on March 12, 1951, in 16 newspapers and was originally distributed by Post-Hall Syndicate. It is now written and drawn by Ketcham's former assistants, Marcus Hamilton (weekdays, since 1995), Ron Ferdinand (Sundays, since 1981), and son Scott Ketcham (since 2010), and distributed to at least 1,000 newspapers in 48 countries and in 19 languages by King Features Syndicate. The comic strip usually runs for a single panel on weekdays and a full strip on Sundays.
 </p><p>
-The comic strip became so successful that it was adapted to other popular media, including several television shows, both live-action and animated, and several feature films, including theatrical and direct-to-video releases.
+The comic strip became so successful that it was adapted to other popular media, including several television shows, both live-action and animated, and several feature films, including theatrical and direct-to-video releases. 1951-2019 Comic series by Post-Hall, Standard/Pines, Fawcett, Charlton, Marvel, Fantagraphics.1959-1963 TV Series by CBS, 1986-1988 TV Animated by CBS, 1993 Movie by Warner Bros. 
+
 </p><p>
 Coincidentally, a UK comic strip of the same name debuted on the same day, though the issue in question bore the cover date of March 17. The two are not related and change their names subtly in each other's respective home bases to avoid confusion.
 </p>
